# fastapi-python

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 014362392761_initial.py
app/: main.py
app/api/: deps.py
app/api/middleware/: prometheus.py
app/api/routes/: auth.py  clients.py  metrics.py  products.py  users.py
app/core/: config.py  constants.py  logging.py  security.py
app/domain/entities/: __init__.py  client.py  product.py  user.py
app/domain/repositories/: __init__.py  client_repository.py  product_repository.py  user_repository.py
app/domain/services/: __init__.py  auth_service.py
app/infrastructure/cache/: redis_cache.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: __init__.py  client.py  product.py  product_embedding.py  product_metric.py  user.py
app/infrastructure/embeddings/: __init__.py  dummy_embeddings.py  errors.py  gemini_embeddings.py  local_embeddings.py  openai_embeddings.py  product_text.py  resolve.py
app/infrastructure/gemini/: __init__.py  http_error.py  text.py
app/infrastructure/messaging/: __init__.py  arq_settings.py
app/infrastructure/repositories/: __init__.py  product_embedding_repository.py  product_metric_repository.py  sqlalchemy_client_repository.py  sqlalchemy_product_repository.py  sqlalchemy_user_repository.py
app/schemas/: __init__.py  auth.py  client.py  product.py  user.py
app/workers/: cli.py  tasks.py
docker/initdb/: 01-extensions.sql
scripts/: seed_demo.py
