[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend — clean architecture, TimescaleDB, PGVector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",
    "pgvector>=0.3.6",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=2.6.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
arq-worker = "app.workers.cli:main"
